--- a/sep_nsep_da_gaussian_100mev_5h.ipynb
+++ b/sep_nsep_da_gaussian_100mev_5h.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpZlosoKw9ZldBCCCdDwJo"
+      "authorship_tag": "ABX9TyNpZlosoKw9ZldBCCCdDwJo",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/pouyahosseinzadeh/0ca78931c8aaff6569b1f37f4f591289/sep_nsep_da_gaussian_100mev_5h.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
